--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 
   font-size: 12px;
+  --bg:rgb(#e3e3e3);
+
+  --lyrics_color:#fff;
+  --lyrics_color_active:#242424;
+  --color_tjx:#e3b4bf;
 }
 
 a {
@@ -30,9 +35,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--bg);
 }
 img{
   display: block;
+  -webkit-user-drag: none;
 }
 h1 {
   font-size: 3.2em;
@@ -64,14 +71,16 @@ button:focus-visible {
 
 #app {
   margin: 0 auto;
-  padding: 2rem;
-  /* text-align: center; */
+  padding: .5rem;
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    --bg: #e3e3e3;
   }
   a:hover {
     color: #747bff;
