应用图标,使用MiSans字体,删除播放列表使用Windows弹窗

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,28 @@
+@font-face {
+  font-family: MiSans;
+  src: url("./assets/MiSans-Normal.ttf");
+  font-weight: normal;
+}
+@font-face {
+  font-family: MiSans;
+  src: url("./assets/MiSans-Semibold.ttf");
+  font-weight: 600;
+}
+@font-face {
+  font-family: MiSans;
+  src: url("./assets/MiSans-Bold.ttf");
+  font-weight: bold;
+}
+@font-face {
+  font-family: MiSans;
+  src: url("./assets/MiSans-Light.ttf");
+  font-weight: light;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: MiSans;
+  font-weight: 600;
   line-height: 1.5;
-  font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
