--- a/src/style.css
+++ b/src/style.css
@@ -63,10 +63,10 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  transition: background 0.5s ease;
+  transition: background-color 0.5s ease;
 }
 .static {
-  background-color: var(--bg_gradient0);
+  background-color: var(--bg_static);
 }
 .lumin {
   background: linear-gradient(
